# RUST_project

./: .env  Cargo.toml
src/: .env  Transactions.sql  create_all.bat  create_db_and_user.sql  main.rs  main_ui.rs  primer_GUI.rs  schema.rs
src/controller/: app_controller.rs  category_controller.rs  controller.rs  login_controller.rs  mod.rs  registration_controller.rs  transaction_controller.rs
src/model/: category.rs  db.rs  mod.rs  model.rs  state.rs  transaction.rs  user.rs
src/view/: app.rs  combined_app.rs  dashboard.rs  dashboard_view.rs  login_view.rs  mod.rs  register_view.rs  registration_view.rs  reset_password_view.rs  view.rs
