[package]
name = "finance_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
bcrypt = "0.12"
serde = { version = "1.0", features = ["derive"] }
iced = "0.10"

chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }


[[bin]]
name = "finance_manager"
path = "src/main_ui.rs"
